--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Vue Mask - Devindex</title>
-  <!--<link rel="stylesheet" href="/global.css">-->
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
 </head>
 <body>
   <div id="app"></div>
