--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Vue Mask - Devindex</title>
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
 </head>
 <body>
   <div id="app"></div>
